--- a/Congress/index-2.html
+++ b/Congress/index-2.html
@@ -71,105 +71,78 @@
         </div>
     </div>
 
-
-
-
-
-
 	<div class="static-main-img static-main-img-2">
 	</div>
 
 
 	<div class="people people-time">
 	<div class="people-inner people-inner_extra">
-			<h2>Розклад засідань</h2>
+			<h2>НАУКОВО-ПРАКТИЧНА<br>ПРОГРАМА</h2>
 			<div class="people_block-1 people_block-1-dates">
 				<div class="people_block-1-date">
-					<p>12 жовтня<br>віторок</p>
+					<p>Загально–актуальні<br>питання</p>
 				</div>
 				<div class="people_block-1-time">
-					<p><b>Урочисте відкриття конгресу</b><p class="extra">10:00</p><p>
+					<p>Сфери розвитку організації  допомоги дітям в умовах трансформації медицини  в Україні.<p>
 
-					<p><b>Симпозіум</b><p class="extra">11:15-12:15</p><br>
-					Сучасні клінічні рекомендації з лікування респіраторної патології у
-					дітей</p>
+					<p>Перспективні напрямки приватної  лікарської практики та страхової сімейної медицини в Україні.</p>
 
-					<p><b>Симпозіум</b><p class="extra">12:15-13:00</p>
-					Сучасні напрями терапії та
-					профілактики гострих респіраторних
-					захворювань у дітей</p>
+					<p>Збереження балансу юридичних прав батьків та обов’язків і прав лікарів – педіатрів в ім’я здоров’я дитини.</p>
 
-					<p><b>Симпозіум</b><p class="extra">13:00-14:00</p>
-					Медико-біологічне значення пробіотиків в практиці лікаря</p>
+					<p>Особливості перебігу, діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
 
-					<p><b>Симпозіум</b><p class="extra">14:00-14:45</p>
-					Експертний погляд на фармакотерапію поширених захворювань у дітей</p>
+					<p>Світовий та вітчизняний досвід з питань діагностики та лікування сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
 
-					<p><b>Симпозіум</b><p class="extra">14:45-15:30</p>
-					Аргументоментовані підходи в лікуванні респіраторних захворювань та коморбідних станів</p>
+					<p>Орфанні та соціально-значимі захворювання дитячого віку: новітні технології діагностики, лікування та профілактики.</p>
 
-					<p><b>I засідання</b><p class="extra">15:30-18:00</p>
-					Проблемні питання педіатрії</p>
+					<p>Раціональна фармакотерапія в клінічній педіатрії та неонатології.</p>
 
-					<p><b>II засідання (Дискусійний клуб)</b><p class="extra">18:00-18:45</p>
-					Патологія сну у дітей </p>
+					<p>Екологічні проблеми та дитяча екопатологія в сучасних умовах.</p>
+
+					<p>Дискусійні питання підготовки лікарів за спеціальністю «Педіатрія» в Україні.</p>
+
+					<p>Оновлення базових знань з питань вікової нормальної гістології, фізіології та анатомії дитини.</p>
+
+					<p>Втілення світогляду незабутніх видатних українських педіатрів у розвиток медицини дитини майбутнього.</p>
 				</div>
 			</div>
 
 			<div class="people_block-1 people_block-1-dates">
 				<div class="people_block-1-date">
-					<p>13 жовтня<br>середа</p>
+					<p>Майстер –<br>класи</p>
 				</div>
 				<div class="people_block-1-time">
-					<p><b>ІII засідання</b><p class="extra">11:15-12:15</p><br>
-					Сучасні проблеми пульмонології та алергології дитячого віку</p>
+					<p>Удосконалення навичок  базових та спеціалізованих реанімаційних заходів, постреанімаційне лікування  в дитячому віці.</p>
 
-					<p><b>Симпозіум</b><p class="extra">12:15-13:00</p>
-					Екстракт листя плюща (EA 575®)</p>
+					<p>Модернізація проведення та інтерпретації результатів сучасних експрес-тестувань й різноманітних діагностичних методів у дітей.</p>
 
-					<p><b>Лекція</b><p class="extra">13:00-14:00</p>
+					<p>Удосконалення  практичних навичок надання медичної допомоги новонародженим. 
 					</p>
 
-					<p><b>Симпозіум</b><p class="extra">14:00-14:45</p>
-					Діалог експертів: Педіатр vs Оториноларинголог</p>
+					<p>Питання  розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика. </p>
 
-					<p><b>Симпозіум</b><p class="extra">14:45-15:30</p>
-					Актуальні питання підготовки дітей, які
-часто хворіють, до сезонних простудних захворювань</p>
+					<p>Особливости ультразвукової діагностики захворювань дитячого віку.</p>
 
-					<p><b>Симпозіум</b><p class="extra">15:30-18:00</p>
-					Кишково-печінковий альянс</p>
-
-					<p><b>IV засідання</b><p class="extra">18:00-18:45</p>
-					Сучасні досягнення гастроентерології, гепатології та нутриціології в педіатрії</p>
-
-					<p><b>V засідання</b><p class="extra">18:00-18:45</p>
-					Проблеми кардіоревматології та нефрології дитячого віку</p>
+					<p>Програма безпеки та самозахисту лікарів в сучасних умовах.</p>
 				</div>
 			</div>
 
 			<div class="people_block-1 people_block-1-dates">
 				<div class="people_block-1-date">
-					<p>14 жовтня<br>четвер</p>
+					<p>Обговорення<br>практичних клінічних<br>випадків</p>
 				</div>
 				<div class="people_block-1-time">
-					<p><b>VI засідання</b><p class="extra">11:15-12:15</p><br>
-					Сучасні можливості раннього виявлення
-та профілактики туберкульозної інфекції
-у дітей та підлітків</p>
+					<p>
+						Виклики сьогодення: Система реабілітації та профілактики постковідного синдрому у дітей.
+					</p>
 
-					<p><b>Зустріч з професором</b><p class="extra">12:15-13:00</p></p>
+					<p>Раціональне вигодовування, дієтетика та нутріціологія в педіатрії, оновлення підходів.   Своєчасна діагностика та лікування стоматологічних захворювань у дітей (в тому числі, онкологічних).</p>
 
-					<p><b>VII засідання</b><p class="extra">13:00-14:00</p>
-					Метаболічний синдром у дітей та підлітків</p>
+					<p>Ризики зриву адаптації дитини в суспільстві та їх  запобігання з точки зору педіатра, психолога та педагога. </p>
 
-					<p><b>VIII засідання</b><p class="extra">14:00-14:45</p>
-					Проблеми соціальної педіатрії та
-організації медичної допомоги дітям</p>
+					<p>Дитяча інвалідність: Медичні, педагогічні та соціальні аспекти.</p>
 
-					<p><b>IХ засідання</b><p class="extra">14:45-15:30</p>
-					Обговорення та прийняття резолюції
-конгресу</p>
+					<p>Міждисциплінарний підхід рішення складних клінічних випадків.</p>
 				</div>
 			</div>
 	</div>
