--- a/Congress/index.html
+++ b/Congress/index.html
@@ -149,26 +149,30 @@
 			<h2>До участі<br>запрошуються:</h2>
 			<div class="container-3_plates">
 				<div class="container-3_plate">
-					<p>лікарі</p>
-					<p>педіатри</p>
-					<p>сімейні лікарі</p>
-					<p>дитячі оторіноларінгологи</p>
-					<p>дитячі психоневрологи</p>
+					<p>лікарів-педіатрів</p>
+					<p>
+					лікарів загальної практики - сімейної
+					медицини та представників різних
+					лікарських спеціальностей
+					</p>
+					<p>фармацевтів</p>
+					<p>медичних сестер</p>
+					<p>психологів</p>
 				</div>
 				<div class="container-3_plate">
-					<p>психологи</p>
-					<p>неонатологи</p>
-					<p>інфекціоністи</p>
-					<p>алергологи</p>
-					<p>гастроентерологи</p>
+					<p>педагогів</p>
+					<p>юристів з медичних питань</p>
+					<p>соціальних працівників</p>
+					<p>голів громадських батьківських об’єднань</p>
+					<p>представників Державних органів Охорони здоров’я й приватних клінік, страхових компаній</p>
 				</div>
-				<div class="container-3_plate">
+<!-- 				<div class="container-3_plate">
 					<p>спеціалісти суміжних</p>
 					<p>спеціальностей, які</p>
 					<p>цікавляться проблемами</p>
 					<p>діагностики та лікування</p>
 					<p>дитячих хвороб</p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		
@@ -177,51 +181,49 @@
 
 	<div class="mob-container-slider">
 		<div class="mob-container_inner-slider">
-	            <h2>Наукова програма</h2>
+	            <h2>НАУКОВО-ПРАКТИЧНА ПРОГРАМА</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
 	            <div class="mob-container_blue">
 	            	<div class="mob-img-1"></div>
 		        	<div class="mob-text_conf">
 		        		<div class="mob-text_blue"></div>
-		        		<p>Актуальні питання організації допомоги дітям в умовах медичної Реформи  в Україні.</p>
-						<p>Дотримання прав дитини, батьків та лікарів,  проблеми соціальної педіатрії  на сучасному етапі.</p>
-						<p>Епідеміологія довголіття в Україні: Від народження до зрілості.</p>
-						<p>Сучасніі підходи до діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
-						<p>Система реабілітації та профілактики постковідного синдрому у дітей.</p>
-						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
+		        		<p>Сфери розвитку організації допомоги дітям в умовах трансформації медицини в Україні.
+Перспективні напрямки приватної лікарської практики та страхової сімейної медицини в Україні.</p>
+						<p>Збереження балансу юридичних прав батьків та обов’язків і прав лікарів – педіатрів в ім’я здоров’я дитини.</p>
+						<p>Особливості перебігу, діагностики та лікування респіраторних інфекцій в епоху пандемії SARS-COV-2.</p>
+						<p>Світовий та вітчизняний досвід з питань діагностики та лікування сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
 		        	</div>
         	</div>
 		</div>
 		<div class="mob-container_inner-slider">
-	            <h2>Наукова програма</h2>
+	            <h2>НАУКОВО-ПРАКТИЧНА ПРОГРАМА</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
 	            <div class="mob-container_blue">
 	            	<div class="mob-img-1 mob-img-2"></div>
 		        	<div class="mob-text_conf">
 		        		<div class="mob-text_blue"></div>
-		        		<p>Проблеми сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
-						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика</p>
-						<p>Аспекти раціонального вигодовування, дієтетики та нутріціології для дітей</p>
-						<p>Удосконалення надання медичної допомоги новонародженим.</p>
-						<p>Актуальні проблеми адаптації дитини в суспільстві, ризики зриву та їх попередження з точки зору допомоги педіатра, психолога та педагога.</p>
-		        		<p>Новітні технології діагностики, лікування та профілактики орфанних та соціально-значимих захворювань дитячого віку.</p>
+		        		<p>Удосконалення навичок базових та спеціалізованих реанімаційних заходів, постреанімаційне лікування в дитячому віці.</p>
+						<p>Модернізація проведення та інтерпретації результатів сучасних експрес-тестувань й різноманітних діагностичних методів у дітей.</p>
+						<p>Удосконалення практичних навичок надання медичної допомоги новонародженим.</p>
+						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика.</p>
+						<p>Особливості ультразвукової діагностики захворювань дитячого віку.</p>
+		        		<p>Програма безпеки та самозахисту лікарів в сучасних умовах.</p>
 		        	</div>
         	</div>
 		</div>
 		<div class="mob-container_inner-slider">
-	            <h2>Наукова програма</h2>
+	            <h2>НАУКОВО-ПРАКТИЧНА ПРОГРАМА</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
 	            <div class="mob-container_blue">
 	            	<div class="mob-img-1 mob-img-3"></div>
 		        	<div class="mob-text_conf">
 		        		<div class="mob-text_blue"></div>
-		        		<p>Раціональна фармакотерапія в клінічній педіатрії та неонатології.</p>
+		        		<p>Виклики сьогодення: Система реабілітації та профілактики постковідного синдрому у дітей.</p>
+						<p>Раціональне вигодовування, дієтетика та нутріціологія в педіатрії, оновлення підходів.</p>
+						<p>Своєчасна діагностика та лікування стоматологічних захворювань у дітей (в тому числі, онкологічних).</p>
+						<p>Ризики зриву адаптації дитини в суспільстві та їх запобігання з точки зору педіатра, психолога та педагога.</p>
 						<p>Дитяча інвалідність: Медичні, педагогічні та соціальні аспекти.</p>
-						<p>Екологічні проблеми та дитяча екопатологія в сучасних умовах.</p>
-						<p>Актуальні питання підготовки лікарів у галузі педіатрії на сучасному етапі розвитку суспільства.</p>
-						<p>Оновлення базових знань з питань вікової нормальної гістології, фізіології та анатомії дитини.</p>
-						<p>Історичні аспекти розвитку педіатрії.</p>
-						<p>Програма безпеки та самозахисту лікарів на сучасному етапі.</p>
+						<p>Міждисциплінарний підхід рішення складних клінічних випадків.</p>
 		        	</div>
         	</div>
 		</div>
@@ -239,12 +241,11 @@
 	            	<div class="slider-img-1"></div>
 		        	<div class="slider-text_conf">
 		        		<div class="slider-text_blue"></div>
-		        		<p>Актуальні питання організації допомоги дітям в умовах медичної Реформи  в Україні.</p>
-						<p>Дотримання прав дитини, батьків та лікарів,  проблеми соціальної педіатрії  на сучасному етапі.</p>
-						<p>Епідеміологія довголіття в Україні: Від народження до зрілості.</p>
-						<p>Сучасніі підходи до діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
-						<p>Система реабілітації та профілактики постковідного синдрому у дітей.</p>
-						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
+		        		<p>Сфери розвитку організації допомоги дітям в умовах трансформації медицини в Україні.
+Перспективні напрямки приватної лікарської практики та страхової сімейної медицини в Україні.</p>
+						<p>Збереження балансу юридичних прав батьків та обов’язків і прав лікарів – педіатрів в ім’я здоров’я дитини.</p>
+						<p>Особливості перебігу, діагностики та лікування респіраторних інфекцій в епоху пандемії SARS-COV-2.</p>
+						<p>Світовий та вітчизняний досвід з питань діагностики та лікування сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
 		        	</div>
 	        	</div>
 	        	<div class="slider-pag">1/3</div>
@@ -258,12 +259,12 @@
 	            	<div class="slider-img-1 slider-img-2"></div>
 		        	<div class="slider-text_conf">
 		        		<div class="slider-text_blue"></div>
-		        		<p>Проблеми сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
-						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика</p>
-						<p>Аспекти раціонального вигодовування, дієтетики та нутріціології для дітей</p>
-						<p>Удосконалення надання медичної допомоги новонародженим.</p>
-						<p>Актуальні проблеми адаптації дитини в суспільстві, ризики зриву та їх попередження з точки зору допомоги педіатра, психолога та педагога.</p>
-		        		<p>Новітні технології діагностики, лікування та профілактики орфанних та соціально-значимих захворювань дитячого віку.</p>
+		        		<p>Удосконалення навичок базових та спеціалізованих реанімаційних заходів, постреанімаційне лікування в дитячому віці.</p>
+						<p>Модернізація проведення та інтерпретації результатів сучасних експрес-тестувань й різноманітних діагностичних методів у дітей.</p>
+						<p>Удосконалення практичних навичок надання медичної допомоги новонародженим.</p>
+						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика.</p>
+						<p>Особливості ультразвукової діагностики захворювань дитячого віку.</p>
+		        		<p>Програма безпеки та самозахисту лікарів в сучасних умовах.</p>
 		        	</div>
 	        	</div>
 	        	<div class="slider-pag">2/3</div>
@@ -277,13 +278,12 @@
 	            	<div class="slider-img-1 slider-img-3"></div>
 		        	<div class="slider-text_conf">
 		        		<div class="slider-text_blue"></div>
-						<p>Раціональна фармакотерапія в клінічній педіатрії та неонатології.</p>
+						<p>Виклики сьогодення: Система реабілітації та профілактики постковідного синдрому у дітей.</p>
+						<p>Раціональне вигодовування, дієтетика та нутріціологія в педіатрії, оновлення підходів.</p>
+						<p>Своєчасна діагностика та лікування стоматологічних захворювань у дітей (в тому числі, онкологічних).</p>
+						<p>Ризики зриву адаптації дитини в суспільстві та їх запобігання з точки зору педіатра, психолога та педагога.</p>
 						<p>Дитяча інвалідність: Медичні, педагогічні та соціальні аспекти.</p>
-						<p>Екологічні проблеми та дитяча екопатологія в сучасних умовах.</p>
-						<p>Актуальні питання підготовки лікарів у галузі педіатрії на сучасному етапі розвитку суспільства.</p>
-						<p>Оновлення базових знань з питань вікової нормальної гістології, фізіології та анатомії дитини.</p>
-						<p>Історичні аспекти розвитку педіатрії.</p>
-						<p>Програма безпеки та самозахисту лікарів на сучасному етапі.</p>
+						<p>Міждисциплінарний підхід рішення складних клінічних випадків.</p>
 		        	</div>
 	        	</div>
 	        	<div class="slider-pag">3/3</div>
@@ -303,7 +303,7 @@
 		<a class=" partners-plate-link1" href="./index-2.html">
 			<div class="partners-plate_blue-text_outer">
 				<div class="partners-plate_blue-text"></div>
-				<p>Розклад</p>
+				<p>Програма</p>
 			</div>
 		</a>
 		<a class=" partners-plate-link2" href="./index-3.html">
@@ -335,9 +335,6 @@
 					<b>Цимбалюк В.І.</b>
 					<p>Президент Національної академії медичних наук України</p>
 				</div>
-			</div>
-			<h2>СПІВГОЛОВИ:</h2>
-			<div class="people_block-1 people_block-12">
 				<div class="people_plate">
 					<div class="people_plate_img people_plate_img_ant"></div>
 					<b>Антипкін Ю.Г.</b>
@@ -345,13 +342,31 @@
 				</div>
 				<div class="people_plate">
 					<div class="people_plate_img"></div>
-					<b>Садов’як І.Д.</b>
-					<p>Перша заступниця Міністра охорони здоров’я України</p>
+					<b>О.М. Лук’янової НАМН України</b>
+					<p>Президент Асоціації педіатрів України.</p>
+				</div>
+			</div>
+			<h2>СПІВГОЛОВИ ОРГКОМІТЕТУ КОНГРЕСУ:</h2>
+			<div class="people_block-1 people_block-12">
+				<div class="people_plate">
+					<div class="people_plate_img"></div>
+					<b>Садов’як І.Д</b>
+					<p>перша заступниця Міністра охорони здоров’я України</p>
 				</div>
 				<div class="people_plate">
 					<div class="people_plate_img"></div>
 					<b>Микичак І.В.</b>
 					<p>Заступниця Міністра охорони здоров’я України</p>
+				</div>
+				<div class="people_plate">
+					<div class="people_plate_img"></div>
+					<b>Кучин Ю.Л.</b>
+					<p>ректор Національного медичного університету імені О.О. Богомольця</p>
+				</div>
+				<div class="people_plate">
+					<div class="people_plate_img"></div>
+					<b>Вороненко Ю.В.</b>
+					<p>ректор Національного університету охорони здоров’я України імені П.Л. Шупика</p>
 				</div>
 			</div>
 			<h2>ЗАСТУПНИКИ:</h2>
@@ -365,16 +380,6 @@
 					<div class="people_plate_img"></div>
 					<b>Єфіменко О.В.</b>
 					<p>Директор Департаменту охорони здоров’я Київської обласної державної адміністрації</p>
-				</div>
-				<div class="people_plate">
-					<div class="people_plate_img people_plate_img_kuch"></div>
-					<b>Кучин Ю.Л.</b>
-					<p>Ректор Національного медичного університету імені О.О. Богомольця</p>
-				</div>
-				<div class="people_plate">
-					<div class="people_plate_img"></div>
-					<b>Вороненко Ю.В.</b>
-					<p>Ректор Національного університету охорони здоров’я України імені П.Л. Шупика</p>
 				</div>
 				<div class="people_plate">
 					<div class="people_plate_img"></div>
