--- a/Congress/index.html
+++ b/Congress/index.html
@@ -359,7 +359,7 @@
 					<p>Заступниця Міністра охорони здоров’я України</p>
 				</div>
 				<div class="people_plate">
-					<div class="people_plate_img"></div>
+					<div class="people_plate_img people_plate_img_kuch"></div>
 					<b>Кучин Ю.Л.</b>
 					<p>ректор Національного медичного університету імені О.О. Богомольця</p>
 				</div>
