--- a/Congress/index.html
+++ b/Congress/index.html
@@ -338,12 +338,7 @@
 				<div class="people_plate">
 					<div class="people_plate_img people_plate_img_ant"></div>
 					<b>Антипкін Ю.Г.</b>
-					<p>Директор ДУ «Інститут педіатрії, акушерства та гінекології імені академіка О.М. Лук’янової НАМН України», Президент Асоціації педіатрів України</p>
-				</div>
-				<div class="people_plate">
-					<div class="people_plate_img"></div>
-					<b>О.М. Лук’янової НАМН України</b>
-					<p>Президент Асоціації педіатрів України.</p>
+					<p>Директор ДУ «Інститут педіатрії, акушерства та гінекології імені академіка О.М. Лук’янової НАМН України», Президент Асоціації педіатрів України. О.М. Лук’янової НАМН України. Президент Асоціації педіатрів України.</p>
 				</div>
 			</div>
 			<h2>СПІВГОЛОВИ ОРГКОМІТЕТУ КОНГРЕСУ:</h2>
@@ -525,14 +520,14 @@
 			<b>З питань публікації тез:</b>
 			<p>Е-mail: xxxxxxxxxxxx@xxxxxxxxxx.com</p>
 			<b>З питань бронювання готелів та поселення:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 			<b>З питань бронювання автобусних, залізничних та авіаквитків:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 		</div>
 		<div class="contacts-right">
 			<h4>Партнерам</h4>
 			<b>З організаційних питань участі у заході:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 		</div>
 	</div>
 </div>
