--- a/Congress/index-4.html
+++ b/Congress/index-4.html
@@ -199,14 +199,14 @@
 			<b>З питань публікації тез:</b>
 			<p>Е-mail: xxxxxxxxxxxx@xxxxxxxxxx.com</p>
 			<b>З питань бронювання готелів та поселення:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 			<b>З питань бронювання автобусних, залізничних та авіаквитків:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 		</div>
 		<div class="contacts-right">
 			<h4>Партнерам</h4>
 			<b>З організаційних питань участі у заході:</b>
-			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
+			<p>Тел.: +38 050 000-00-00 (Xxxxxx Xxxxxxxxxxxx)<br>Е-mail: xxxxxxxxxxxxxxxx@xxxxxxxxxxx.com</p>
 		</div>
 	</div>
 </div>
