--- a/Congress/index.html
+++ b/Congress/index.html
@@ -127,17 +127,14 @@
                 </div>
                 <div class="panel">
                     <p>
-                    	Ця найбільша наукова подія педіатричного життя як завжди збирає провідних вчених, організаторів охорони здоров'я та практикуючих лікарів, котрі надають медичну допомогу дітям.</p>
+                    	Ця найбільша подія педіатричного життя традиційно збирає провідних вчених, організаторів охорони здоров'я та практикуючих лікарів, які надають медичну допомогу</p>
+ <p>У роботі ХV  Конгресу педіатрів України запрошуємо взяти участь  лікарів-педіатрів, лікарів загальної практики - сімейної медицини та представників різних лікарських спеціальностей, а також фармацевтів, медичних сестер, психологів, педагогів ,  юристів з медичних питань , соціальних працівників, голів громадських батьківських об’єднань, представників Державних органів Охорони здоров’я  й приватних клінік, страхових компаній.</p>
 
- <p>До широкомасштабної роботи ХV-го Конгресу запрошуються взяти участь всіх фахівців –педіатрів та представників різних спеціальностей: </p>
+<p>На  пленарних засіданнях ХV Конгресу  в змішаному офф-лайн/он-лайн  режимі  будуть представлені  доповіді, як найбільш вагомих, так і досвідчених молодих  вчених-педіатрів з України та провідних міжнародних спікерів з Німеччини, країн Балтії, Грузії тощо.</p>
 
- <p>дитячих інфекціоністів, пульмонологів, імунологів, алергологів, кардіоревматологів, реаніматологів, неонатологів, отоларингологів, функціоналістів, радіологів, гастроентерологів, нефрологів, гематологів, дерматологів, психоневрологів, ортопедів-вертебрологів, ендокринологів, фтизіатрів, хірургів, стоматологів, сімейних лікарів, фармацевтів, медсестер, психологів та педагогів , а також юристів з питань страхової медицини, соціальних працівників та керівників Державних органів Охорони здоров’я й приватних клінік, страхових компаній з різних регіонів України.</p>
+ <p>Крім того, ви станете учасниками  дискусійних  клубів, майстер-класів, які будуть  присвячені гостро актуальним питанням ведення хворих з  Ковідом та постковідним синдромом, вакцинації та тестуванню, алгоритмам надання невідкладної допомоги, клінічному розбору складних випадків, методам профілактики, навичкам самозахисту лікарів та ін. важливим  проблемам сьогодення.</p>
 
-<p>На пленарних засіданнях та наукових симпозіумах в змішаному офф-лайн/он-лайн режимі будуть заслухані доповіді, як найбільш вагомих, так і досвідчених молодих вчених-педіатрів з України та провідних міжнародних спікерів з Германії, країн Балтії, Грузії та ін. </p>
-
- <p>Крім того, ми станемо учасниками дискусійних клубів, майстер-класів, які будуть присвячені гостро актуальним питанням ведення хворих з Ковідом та постковідним синдромом, вакцинації та тестуванню інфекцій, алгоритмам надання невідкладної допомоги, клінічному розбору складних випадків, методам профілактики та самозахисту лікарів та ін. важливим проблемам сьогодення.  </p>
-
- <p>Конгрес проводиться згідно Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році (№134). Участь у них передбачає отримання 10 балів для учасників та 30 балів для спікерів, які матимуть змогу отримати сертифікат для атестації на присвоєння (підтвердження) лікарської кваліфікаційної категорії та зарахувати встановлену кількість балів відповідно до «Шкали значень різних видів діяльності лікарів (провізорів) у період між передатестаційними циклами».  
+<p>Конгрес внесено до Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році за № 134.  Сертифікат учасника дає право на отримання 10 балів безперервного професійного розвитку, сертифікат (диплом) доповідача – 30 балів (відповідно до наказу МОЗ України від 22.02.2019 № 446.</p>
                     </p>
                 </div>
                 <div class="accordion more">Дізнатись більше</div>
@@ -535,7 +532,7 @@
     <div class="footer">
         <div class="footer-logo_container">
             <div class="footer-logo"></div>
-            <p>© 2015, Конгрес педіатрів України</p>
+            <p>© 2021, Конгрес педіатрів України</p>
         </div>
         
         <div class="social">
