admin page graph corrections

--- a/Owey/care.html
+++ b/Owey/care.html
@@ -120,12 +120,29 @@
         <p>Усі інгредієнти, які входять до складу засобів по догляду, вирощуються, збираються та дистилюються на фермі в Болоньї <b>Ortofficina oway</b>. ЇЇ розмір понад 50000м2. Саме тут і «народжуються» усі біодинамічні екстракти та ефірні олії, які ми використовуємо безпосередньо в продукції OW. Кожен посів, ріст, збір врожаю, обробка і дистиляція процесу відбуваються без використання будь-яких хімічних речовин, поважаючи біодинамічний метод сільського господарства. Ми гарантуємо чистоту і прозорість. Також, важливо, що 85% продукції пакується у бурштинове скло, а 15% упаковки, яку ми використовуємо для продукції – це алюміній. Бурштинове скло та алюміній повністю на 100% підлягають вторинній переробці необмежену кількість разів. Продукти позбавлені SLS/SLES, парабенів, штучних барвників, синтетичних ароматів, EDTA, PEG/PPG/BG, мінеральних масел, компонентів заснованих на нафті, генетично модифікованих компонентів.
         </p>
 
-        <p><b>До категорії «Догляд» відносяться наступні лінії:</b> ColorUp, dailyAct, xVolume, moisturizing, beCurly, silk'n glow, smooth+ та Hblonde (anti-yellow shampoo).
+        <p><b>До категорії «Догляд» відносяться наступні лінії: SUNWAY OWAY, ColorUp, dailyAct, xVolume, moisturizing, beCurly, silk`n glow, smooth+ та Hblonde (anti-yellow shampoo).
         </p>
 
     </div>
 
     <div class="big-plates_container">
+
+        <div class="big-plate big-plate_care">
+            <div class="big-plate_text">
+                <h4>
+                    SUNWAY OWAY
+                </h4>
+                <p>
+                    Відновлювальна, живильна синергія для волосся та тіла влітку: шампунь для волосся та тіла після засмаги 240/950 мл, маска для волосся після засмаги 150/500 мл, бальзам для тіла після засмаги 150 мл, сонячна сироватка 100 мл
+                </p>
+
+                <p>
+                    <b>Лінія для захисту волосся та тіла від сонця, солі і хлору.</b>
+                    Основні активні інгредієнти: біодинамічний екстракт календули захищає і зволожує чутливу шкіру та сухе, пошкоджене волосся. Має сильні протизапальні, заспокійливі та антиоксидантні властивості. Органічна олія баобаба підвищує еластичність і м'якість волосся створюючи захисну плівку, яка надає блиск і утримує вологу. Олія маракуї Fair-trade надзвичайно пом'якшує, глибоко живить і зволожує як шкіру так й волосся. Органічна гранатова олія заспокоює та регенерує подразнену, чутливу шкіру та сухе, ламке волосся. Екстракт бурих водоростей зміцнює та тонізує захищаючи волосся і шкіру від різних джерел світла.
+                </p>
+            </div>
+            <div class="big-plate_img"></div>
+        </div>
 
         <div class="big-plate big-plate_care">
             <div class="big-plate_text">
