--- a/Owey/index.html
+++ b/Owey/index.html
@@ -104,6 +104,12 @@
     <div class="slider__wrapper">
         <div class="slider__item">
                 
+            <div class="slider-img-0">
+                <h2>Проведи літо <br>в стилі <b>OWAY</b></h2>
+            </div>
+        </div>
+        <div class="slider__item">
+                
             <div class="slider-img-1">
                 <h2><b>OWAY</b> — запорука здорового волосся та шкіри твоєї голови</h2>
             </div>
@@ -210,6 +216,7 @@
         </p>
     </div>
     <div class="block-5">
+        <video controls width="100%" src="./images/video.mp4"></video>
     </div>
     <div class="block-6">
         <div class="puppet">
