admin page graph corrections

--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" href="./images/logo_pluw 2.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
-<!--    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>-->
-<!--    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 </head>
 <body>
 
@@ -28,8 +28,8 @@
                 <a class="navmenu" href="#block-4">Поради</a>
 
                 <a class=" where-to-buy menuLi menuLi5" href="#block-5">ДЕ КУПИТи</a>
-                <a class="lang lang-dop"><b>RU</b></a>
-                <a class="lang" href=""><p>UA</p>
+                <a class="lang lang-dop"><b>UA</b></a>
+                <a class="lang" href=""><p>RU</p>
                 </a>
             </div>
 
@@ -58,8 +58,8 @@
                             <a class=" where-to-buy menuLi menuLi5" href="#block-5">ГДЕ КУПИТЬ</a>
                         </li> -->
                         <li>
-                            <a class="lang lang-dop"><b>RU</b></a>
-                            <a class="lang" href=""><p>UA</p></a>
+                            <a class="lang lang-dop"><b>UA</b></a>
+                            <a class="lang" href=""><p>RU</p></a>
                         </li>
                     </ul>
                 </div>
@@ -92,6 +92,10 @@
 
 
 <div class="container-1">
+    <div class="mob-section">
+        <p class="mob-main-text">НЕЙРОПЛАНТ<sup>®</sup></p>
+        <p class="mob-text">додай життю фарб!</p>
+    </div>
     <div class="container-1_product">
         <p>
             Німецький рослинний антидепресант
@@ -425,61 +429,50 @@
         <!-- <a target="_blank" class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">ГДЕ КУПИТЬ</a> -->
     </div>
     <p>
-        Источники информации:</p>
-    <p>1. Адаптировано из https://www.webmd.com/
+        Доказова база:
+    </p>
+    <p>1 – Адаптовано з https://www.webmd.com/
+    </p>
+    <p>
+        2– Efficacy of Hypericum extract WS() 5570 compared with paroxetine in patients with a moderate major depressive episode - a subgroup analysis. Seifritz E, Hatzinger M, Holsboer-Trachsler E.Int J Psychiatry Clin Pract. 2016 Sep;20(3):126-32. doi: 10.1080/13651501.2016.1179765. Epub 2016 May
+    </p>
+    <p>
+        3–  Адаптовано з «Депресивні розлади у загальній лікарській практиці, навчальний посібник» (Попов В.В., Трохова М.В., Новикова И.А).
     </p>
 </div>
 
 
-<div class="disclamer-tra__inner">
-        <div class="logo-block">
-            <p class="dt1">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
-            <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p>Постачальник<br>Альпен Фарма АГ<br>(Швейцарія)</p></a>
-        </div>
-    </div>
 
-    <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
-    </div>
+<div class="vita-footer">
+        <div class="vita-footer_inner">
+            <div class="vft">
+                  <div class="logo1"></div>
+                  <div class="vita-footer_text">
+                      Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням обов’язково ознайомтеся з інструкцією і проконсультуйтеся із лікарем. Зберігати у недоступному для дітей місці. Є протипоказання і побічні реакції.
+Нейроплант® таблетки, вкриті оболонкою, по 20 таблеток у блістері Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. 
 
-<!-- <div class="disclamer-container">
-    <div class="disclamer-main">
-        <p class="disclamer-main_title">
-            Источники информации:
+
+                        <br>
+                        <strong>Виробник:</strong> Др. Вільмар Швабе ГмбХ і Ко. КГ, Німеччина<br>
+
+<strong>Ексклюзивний представник в Україні:</strong> «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцарія.<br>
+
+<strong>Ексклюзивний дистриб’ютор в Україні</strong> ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075,
+тел.: (044) 401–81–03. 
+                     <br>Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість лікарського засобу Нейроплант®, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com».
+
+                  </div>
+                  <div class="logo2"></div>
+                  <div class="logos-mob">
+                    <div class="logo1-mob"></div>
+                    <div class="logo2-mob"></div>
+                  </div>
+          </div>
+        <p class="vita-disclamer">
+            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
         </p>
-        <p>
-            1. Адаптировано из https://www.webmd.com/
-        </p>
-        
-        <p class="disclamer-main_sub">
-            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
-        </p>
-    </div>
-</div> -->
-
-
-
-
-<!--         <div class="map-text">
-            <p></p>
-        </div> -->
-    <!-- <div class="disclamer-tra__inner">
-        <div class="logo-block">
-            <div class="logo1">
-                <div class="logo1-img"></div>
-                <p>Производитель Энгельхард Арцнаймиттель Гмбх и Ко. (Германия)<br>РУ: МЗ РБ капли № 9429/10/16 от 02.03.2016 бессрочно, сироп 158/94/02/12/18 от 05.03.2018 бессрочно.
-                </p>
-            </div>
-            <div class="logo2">
-                <div class="logo2-img"></div>
-                <p>Официальный представитель в РБ: AO “Alpen Pharma AG” (Швейцарская Конфедерация).<br>
-                    Представительство в РБ: 220053, г. Минск, ул. Пархоменко, 3, офис 1Б<br>
-                    www.alpenpharma.com   info.belarus@alpenpharma.com</p>
-            </div>
-        </div>
-    </div> -->
+      </div>
+  </div>
 
 </div>
 
