admin page graph corrections

--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -94,7 +94,7 @@
 <div class="container-1">
     <div class="mob-section">
         <p class="mob-main-text">НЕЙРОПЛАНТ<sup>®</sup></p>
-        <p class="mob-text">додай життю фарб!</p>
+        <p class="mob-text">додай життю<br>фарб!</p>
     </div>
     <div class="container-1_product">
         <p>
