admin page graph corrections

--- a/neiroplant-new/index.html
+++ b/neiroplant-new/index.html
@@ -29,7 +29,7 @@
 
                 <a class=" where-to-buy menuLi menuLi5" href="#block-5">ДЕ КУПИТи</a>
                 <a class="lang lang-dop"><b>UA</b></a>
-                <a class="lang" href=""><p>RU</p>
+                <a class="lang" href="./index-ru.html"><p>RU</p>
                 </a>
             </div>
 
@@ -59,7 +59,7 @@
                         </li> -->
                         <li>
                             <a class="lang lang-dop"><b>UA</b></a>
-                            <a class="lang" href=""><p>RU</p></a>
+                            <a class="lang" href="./index-ru.html"><p>RU</p></a>
                         </li>
                     </ul>
                 </div>
@@ -139,7 +139,7 @@
 </div>
 
 <div class="container-4">
-    <div class="container-4_inner">
+    <div class="container-4_inner ">
 
     </div>
 </div>
@@ -442,10 +442,10 @@
     <p>1 – Адаптовано з https://www.webmd.com/
     </p>
     <p>
-        2– Efficacy of Hypericum extract WS() 5570 compared with paroxetine in patients with a moderate major depressive episode - a subgroup analysis. Seifritz E, Hatzinger M, Holsboer-Trachsler E.Int J Psychiatry Clin Pract. 2016 Sep;20(3):126-32. doi: 10.1080/13651501.2016.1179765. Epub 2016 May
+        2 – Efficacy of Hypericum extract WS() 5570 compared with paroxetine in patients with a moderate major depressive episode - a subgroup analysis. Seifritz E, Hatzinger M, Holsboer-Trachsler E.Int J Psychiatry Clin Pract. 2016 Sep;20(3):126-32. doi: 10.1080/13651501.2016.1179765. Epub 2016 May
     </p>
     <p>
-        3–  Адаптовано з «Депресивні розлади у загальній лікарській практиці, навчальний посібник» (Попов В.В., Трохова М.В., Новикова И.А).
+        3 –  Адаптовано з «Депресивні розлади у загальній лікарській практиці, навчальний посібник» (Попов В.В., Трохова М.В., Новикова И.А).
     </p>
 </div>
 
