admin page graph corrections

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 			<a href="Lazea-new/index.html">laSea-new</a>
 			<a href="AlpeKid/index.html">AlpeKid</a>
 			<a href="Congress/index.html">Congress</a>
+			<a href="neiroplant-new/index.html">neiroplant-new</a>
 
 		</section>
 	</main>
@@ -293,6 +294,9 @@
 	}
 	a:nth-child(62)::before {
 		background: url("./Congress/logo.jpg")no-repeat center / contain;
+	}
+	a:nth-child(63)::before {
+		background: url("./neiroplant-new/logo.jpg")no-repeat center / contain;
 	}
 </style>
 
